forEnersys/DavePkg/objects/Sales_Area_data__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Area Data</relationshipLabel>
        <relationshipName>Sales_Area_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_at_Customer_Code__c</fullName>
        <label>Account at Customer Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Group - Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Customer Group - CG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Sales Area Data (Customer Group - new)</relationshipLabel>
        <relationshipName>Customer_Group_lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <formula>Sales_Area_Sales_Organisation_Code__r.Division_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterm_Code_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incoterm Code - Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Incoterm - IC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Sales Area Data</relationshipLabel>
        <relationshipName>Incoterm_Code_lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_iD__c</fullName>
        <formula>Account__r.SAP_Customer_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Code_Text__c</fullName>
        <formula>Sales_Area_Sales_Organisation_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area Code (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Description__c</fullName>
        <formula>Sales_Area_Sales_Organisation_Code__r.Description_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Distribution_Chanel_Code__c</fullName>
        <formula>Sales_Area_Sales_Organisation_Code__r.Distribution_Channel_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area Distribution Chanel Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Division_Code__c</fullName>
        <formula>Sales_Area_Sales_Organisation_Code__r.Division_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area Division Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Sales_Organisation_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Area Code</label>
        <referenceTo>Sales_Area__c</referenceTo>
        <relationshipLabel>Sales Area Data</relationshipLabel>
        <relationshipName>Sales_Area_Data</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Office_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Office - Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Sales Office - SO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Sales Area Data (Sales Office - new)</relationshipLabel>
        <relationshipName>Sales_Office_lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipcond_Code__c</fullName>
        <label>Shipcond Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Conditions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Conditions</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Shipping Condition - SC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Sales Area Data (Shipping Conditions)</relationshipLabel>
        <relationshipName>Sales_Area_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terms of Payment - Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Terms of Payment - TP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Sales Area Data (new Terms of Payment)</relationshipLabel>
        <relationshipName>Sales_Area_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Area Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SAD-{0000000}</displayFormat>
        <label>Sales Area Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Area Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>